# agent-squad-photos-organizer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
cli/: commands.py  decorators.py
modules/: cache.py  config.py
modules/services/: ai_service.py  image_analysis_service.py  organization_service.py
services/: ai_service.py  image_analysis_service.py  photo_service.py
tests/: conftest.py  test_ai_service.py  test_image_analysis_service.py  test_organization_service.py  test_photo_service.py
